<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--LinearLayout do nome-->
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nome"
            android:typeface="normal"/>

        <EditText
            android:id="@+id/editNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <!--LinearLayout da idade-->
        <LinearLayout
            android:id="@+id/linearLayoutIdade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/idade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idade"
                android:typeface="normal"/>

            <EditText
                android:id="@+id/editIdade"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <!--LinearLayout do peso-->
        <LinearLayout
            android:id="@+id/linearLayoutPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso"
                android:typeface="normal"/>

            <EditText
                android:id="@+id/editPeso"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <!--LinearLayout da altura-->
        <LinearLayout
            android:id="@+id/linearLayoutAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altura"
                android:typeface="normal"/>

            <EditText
                android:id="@+id/editAltura"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/botao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/titulo"
        android:layout_below="@id/linearLayout2"
        android:onClick="relatorioNutricional"/>

</RelativeLayout>